--- a/FRONT/css/main.css
+++ b/FRONT/css/main.css
@@ -252,7 +252,42 @@ header {
 }
 
 
-      
+/*PRODUCTOS DESTACADOS*/
 
+.titulo-destacados{
+  text-align: center;
+  margin: 15px;
+  margin-top: 30px;
+}
 
+.contenedor-destacado{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.destacado{
+  width: 250px;
+  margin: 25px;
+  height: 350px;
+  background-color: #f5f5f7;
+  padding: 15px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.destacado img{
+  width: 100%;
+  height: 250px;
+}
+
+.destacado h3{
+  text-align: center;
+}
+
+a{
+  text-decoration: none;
+  color: #000000;
+}
 
