--- a/FRONT/css/main.css
+++ b/FRONT/css/main.css
@@ -294,3 +294,41 @@ a{
   color: #000000;
 }
 
+
+
+
+
+/*Productos carrito*/
+
+.scroll-contenedor{
+  width: 100%;
+}
+
+.scroll{
+  width: 90%;
+  background-color: #f5f5f7;
+  margin: 0 auto;
+  align-items: center;
+  display: flex;
+  overflow-x: scroll;
+}
+
+.producto{
+  min-width: 250px;
+  background-color: #fafafa;
+  border-radius: 15px;
+  margin: 15px;
+}
+
+.producto img{
+  width: 100%;
+}
+
+.producto h4{
+  text-align: center;
+}
+
+.producto a{
+  display: flex;
+  justify-content: center;
+}
